# SUPERMAGMA

./: Cargo.toml  README.md  rust-toolchain
.github/: renovate.json
.github/workflows/: build.yml
src/: main.rs  save.rs
