[package]
name = "supermagma"
description = "A save editor for SUPERHOT"
version = "0.1.0"
license = "GPL-3.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.20", features = ["derive"] }
nano-leb128 = { version = "0.1", features = ["std_io_ext"] }
native-dialog = { version = "0.5", features = ["windows_dpi_awareness", "windows_visual_styles"] }
color-eyre = "0.5"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
